--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "ethers": "^5.6.9",
     "next": "latest",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "viem": "^1.4.1",
+    "wagmi": "^1.3.9"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.15"
   }
 }
